[package]
name = "rust_db_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
geohash = "0.13.1"
geo = { version = "0.30.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
lazy_static = "1.4.0"
regex = "1"