[package]
name = "rust_db_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_db_logic = { path = "../logic" } # Depend on the local logic crate
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = { version = "0.34.7", features = ["compression"] }
geo = { version = "0.30.0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] } # Added clap with derive and env features